syntax = "proto3";

package schedule;

import "common/types/uuid.proto";

message Product {
  common.types.Uuid uuid = 1;
  string name = 2;
}

message CreateProductRequest {
  string name = 1;
}

message CreateProductResponse {
  common.types.Uuid uuid = 1;
}
